fix scrollbar when change the slide in firefox

--- a/sass/page/_main.scss
+++ b/sass/page/_main.scss
@@ -81,7 +81,7 @@
       }
 
       &.about {
-        top: 3vh;
+        top: 4vh;
 
         @for $i from 1 through 9 {
           span:nth-child(#{$i}) {
